# Glyrics

./: README.md  TODO  com.aymanbagabas.Glyrics.json  meson.build  python3-cython.json
data/: com.aymanbagabas.Glyrics.appdata.xml.in  com.aymanbagabas.Glyrics.desktop.in  com.aymanbagabas.Glyrics.desktop.in.in  com.aymanbagabas.Glyrics.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: gi_composites.py  glyrics.gresource.xml  glyrics.in  main.py  meson.build  window.py  window.ui
